--- a/BobBaseCode/app/src/main/res/values/strings.xml
+++ b/BobBaseCode/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Lab3NewComponents</string>
+    <string name="app_name">Space Trader</string>
     <string name="action_settings">Settings</string>
 </resources>
