--- a/BobBaseCode/app/src/main/res/values/strings.xml
+++ b/BobBaseCode/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Space Trader</string>
     <string name="action_settings">Settings</string>
+    <string name="name_header">Name:</string>
 </resources>
