--- a/SpaceTrader/app/src/main/res/values/strings.xml
+++ b/SpaceTrader/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">SpaceTrader</string>
     <string name="action_settings">Settings</string>
+    <string name="name_header">Name:</string>
+    <string name="difficulty_header">Difficulty:</string>
+    <string name="player_name_default">Name</string>
 </resources>
