--- a/SpaceTrader/app/src/main/res/values/strings.xml
+++ b/SpaceTrader/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="name_header">Name:</string>
     <string name="difficulty_header">Difficulty:</string>
     <string name="player_name_default">Name</string>
+    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
 </resources>
