--- a/SpaceTrader/app/src/main/res/values/strings.xml
+++ b/SpaceTrader/app/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="skill2">Fighter: </string>
     <string name="skill3">Trader: </string>
     <string name="skill4">Engineer: </string>
-    <string name="remaining">Points Remaining: 16</string>
+    <string name="remaining">Points Remaining: </string>
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
 </resources>
