Graphics mostly done
still to do:
create player - spinner
market - color and font
solar system map - radio buttons, image
universe map - image

--- a/SpaceTrader/app/src/main/res/values/strings.xml
+++ b/SpaceTrader/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name= "currentFuel">Current Available Fuel: XXXX</string>
     <string name= "travel">Travel</string>
     <string name= "uniMap">Universe Map</string>
+    <string name= "create_player_header">Create Player</string>
 
 
 </resources>
